# file_retrieval_engine_rust

./: .gitignore  Cargo.toml  README.md  activate_env.sh  build.sh  debug_script.sh  file_retrieval_cli.py  persistent_index.py  pyproject.toml  rebuild.sh  test_import.py
.github/workflows/: ci.yml
dataset2_client_server/1_client/client_1/folder1/: Document10015.txt  Document10016.txt  Document10022.txt  Document10028.txt  Document10040.txt  Document10045.txt  Document10046.txt  Document10048.txt  Document10051.txt  Document10058.txt  Document10081.txt  Document10086.txt  Document10087.txt  Document101.txt  Document10113.txt  Document10214.txt  Document10224.txt  Document10274.txt  Document10319.txt  Document10325.txt  Document10326.txt  Document10337.txt  Document10340.txt  Document1035.txt  Document10350.txt  Document10351.txt  Document10366.txt  Document10370.txt  Document10378.txt  Document10383.txt  Document10386.txt  Document10387.txt  Document10391.txt  Document10395.txt  Document10400.txt  Document10401.txt  Document10420.txt  Document10430.txt  Document10445.txt  Document10449.txt  (+21 more)
dataset2_client_server/1_client/client_1/folder2/: Document10686.txt  Document10688.txt  Document10689.txt  Document10696.txt  Document10700.txt  Document10704.txt  Document10724.txt  Document10728.txt  Document10740.txt  Document10750.txt  Document10753.txt  Document10773.txt  Document10810.txt  Document10847.txt  Document10849.txt  Document1085.txt  Document10852.txt  Document10860.txt  Document10866.txt  Document10869.txt  Document1094.txt  Document1096.txt  Document1110.txt  Document1113.txt  Document1114.txt
dataset2_client_server/1_client/client_1/folder3/: Document11212.txt  Document11213.txt  Document1122.txt  Document11227.txt  Document11252.txt  Document1127.txt  Document11274.txt  Document1128.txt  Document11308.txt  Document11314.txt  Document11315.txt  Document11327.txt  Document1134.txt  Document1136.txt  (+12 more)
python/: pyproject.toml  setup.py
python/file_retrieval_engine/: __init__.py
python_examples/: main.py
src/: lib.rs  python.rs
src/client/: app_interface.rs  engine.rs  mod.rs
src/common/: mod.rs  thread_pool.rs
src/server/: app_interface.rs  batch_processor.rs  engine.rs  index_store.rs  mod.rs
(+1291 files in other folders)
