[package]
name = "file-retrieval-engine"
version = "0.1.0"
edition = "2021"
authors = ["Paul Nikholas Lopez <nik.lopez381@gmail.com>"]
description = "A distributed file retrieval and indexing engine"
readme = "README.md"
license = "MIT"

[[bin]]
name = "file-retrieval-client"
path = "src/bin/client.rs"

[[bin]]
name = "file-retrieval-server"
path = "src/bin/server.rs"

[[bin]]
name = "file-retrieval-benchmark"
path = "src/bin/benchmark.rs"

[lib]
name = "file_retrieval_engine"  # Make sure this matches the expected Python module name or you are dead!
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
parking_lot = "0.12"
crossbeam = "0.8"
thiserror = "1.0"
walkdir = "2.4"
array-init = "2.1"
rayon = "1.8"
num_cpus = "1.16"
clap = { version = "4.4", features = ["derive"] }
pyo3 = { version = "0.18.0", features = ["extension-module"] }

[dev-dependencies]
tempfile = "3.9"
tokio-test = "0.4"
