[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "file_retrieval_engine"
version = "0.1.0"
description = "Python bindings for the file retrieval engine"
requires-python = ">=3.7"
authors = [
    {name = "Paul Nikholas Lopez", email = "nik.lopez381@gmail.com"}
]

[tool.maturin]
python-source = "python"
# Let Maturin figure out module-name. It is very sensitive if you don't match the names exactly.
